k8s-30-day-sharing/Day19/demo-ingress/helloworld-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-pod
  labels:
    app: helloworld-pod
    tier: backend
spec:
  containers:
  - name: api-server
    image: chu16537/docker-demo
    ports:
    - containerPort: 3000
