k8s-30-day-sharing/Day19/demo-ingress/ingress-example-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-2
spec:
  rules:
  - host: helloworld-v1.example.com
    http:
     paths:
      - pathType: Prefix
        path: /
        backend: 
         service:
            name: hellworld-v1
            port: 
              number: 80
  - host: helloworld-v2.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
         service:
            name: hellworld-v2
            port: 
              number: 80
