k8s-30-day-sharing/Day19/demo-ingress/ingress-example-3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-3
spec:
  tls:
  - secretName: ssh-secret
  backend:
    service:
      name: apiservice
      port: 
        number: 80
